--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,18 @@ plugins {
     id 'java'
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(Test) {
+    systemProperty "file.encoding", "UTF-8"
+}
+
+processResources {
+    filteringCharset = 'UTF-8'
+}
+
 application {
     mainClass = 'ru.flow.httpserver.gui.ServerGUI'
 }
