--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.0'
+    implementation 'mysql:mysql-connector-java:8.0.33'
 }
 
 test {
