--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation "org.xerial:sqlite-jdbc:3.44.1.0"
 }
 
 test {
