--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation "org.xerial:sqlite-jdbc:3.44.1.0"
+    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation 'ch.qos.logback:logback-classic:1.4.7'
 }
 
 test {
