--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'application'
     id 'java'
+    id 'war'
 }
+
+apply plugin: 'war'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
