--- a/build.gradle
+++ b/build.gradle
@@ -1,63 +1,19 @@
 plugins {
-    id 'application'
     id 'java'
     id 'war'
 }
-
-apply plugin: 'war'
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-tasks.withType(Test) {
-    systemProperty "file.encoding", "UTF-8"
-}
-
-processResources {
-    filteringCharset = 'UTF-8'
-}
-
-application {
-    mainClass = 'ru.flow.httpserver.gui.ServerGUI'
-}
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'ru.flow.httpserver.gui.ServerGUI'
-    }
-
-    // Собираем "fat-jar" со всеми зависимостями
-    from {
-        configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
-    // Включаем ресурсы (если есть картинки/шрифты)
-    from sourceSets.main.resources
-}
-
-group = 'ru.flow.httpserver'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
-    implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.0'
-    implementation 'mysql:mysql-connector-java:8.0.33'
-    implementation "org.xerial:sqlite-jdbc:3.44.1.0"
-    implementation 'org.slf4j:slf4j-api:2.0.7'
-    implementation 'ch.qos.logback:logback-classic:1.4.7'
+    providedCompile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
 }
 
-test {
-    useJUnitPlatform()
+war {
+    archiveFileName = 'demo.war'  // Имя WAR-файла
+    from 'src/main/webapp'       // Включаем статические файлы
 }
