--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     providedCompile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
+    implementation 'org.mindrot:jbcrypt:0.4'
 }
 
 war {
